[project]
name = "growth-mindset-challenge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ishtiaqkhan263", email = "ishtiaqkhan8073@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "ruff>=0.9.7",
]

[project.scripts]
growth-mindset-challenge = "growth_mindset_challenge:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
